# tecton-mcp

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  run_integration_tests.py  test_feature_service_tool.py
.cursor/: .cursor
.cursor/rules/: tecton-optimizations.mdc  tecton-unit-testing.mdc  tecton.mdc
.github/workflows/: ci.yml
src/tecton_mcp/: cli.py  constants.py  tecton_utils.py
src/tecton_mcp/data/: documentation_1_0_chunks.parquet  documentation_1_1_chunks.parquet  documentation_chunks.parquet  embeddings_meta.json  examples.parquet  examples_rift.parquet  examples_spark.parquet
src/tecton_mcp/embed/: __init__.py  meta.py  service.py  vector_db.py
src/tecton_mcp/mcp_server/: __init__.py  server.py
src/tecton_mcp/scripts/: evaluate_embedding_models.py  extract_tecton_sdk_classes.py  generate_embeddings.py  generate_examples_parquet.py
src/tecton_mcp/tools/: api_reference_tools.py  documentation_tools.py  example_code_snippet_tools.py  feature_service_tool_library.py
src/tecton_mcp/utils/: __init__.py  code_parser.py  copilot.py  repo_utils.py  sdk_introspector.py
tests/integration/: __init__.py  claude_executor.py  config.py  runner.py  test_case.py  test_integration.py  workspace_manager.py
tests/integration/test_cases/basic_query_documentation_index_tool_test/: config.yaml  prompt.txt
tests/integration/test_cases/basic_query_example_code_snippet_index_tool_test/: prompt.txt
tests/integration/test_cases/basic_query_tecton_sdk_reference_tool_test/: prompt.txt
(+70 files in other folders)
